# GL-OCaml-Generator

./: .gitignore  .gitmodules  COPYING.txt  README.md  dune  dune-project  gen.ml  gl-ocaml-generator.opam  gl-ocaml.opam
gl.xml.patches/: 00_add_framebuffer_status_group.patch  00_add_len2_attribute.patch  00_add_pointer_class.patch  00_add_program_binary_format_group.patch  00_remove_texture_wrap_mode_group_from_gl_linear_mipmap_linear.patch  10_add_value_group_and_value_for_attributes.patch
overrides/: glGetActiveAttrib.c  glGetActiveAttrib.ml  glGetActiveUniform.c  glGetActiveUniform.ml  glGetAttachedShaders.c  glGetAttachedShaders.ml  glGetProgramInfoLog.c  glGetProgramInfoLog.ml  glGetShaderInfoLog.c  glGetShaderInfoLog.ml  glGetShaderSource.c  glGetShaderSource.ml  glShaderSource.c  glShaderSource.ml
src/: debug.ml  dune  generator.ml  registry.ml  utils.ml
