(rule
 (targets  GL.ml GL_stubs.c)
 (deps     (:gen src/generator.exe) gl.xml)
 (action   (run %{gen})))

(library
 (name            GL)
 (public_name     gl-ocaml)
 (modules         GL)
 (wrapped         false)
 (libraries       bigarray)
 (foreign_stubs
  (language       c)
  (names          GL_stubs))
 (c_library_flags (-lGL)))
