(data_only_dirs gl.xml.patches OpenGL-Registry overrides)

(rule
 (target   gl.xml)
 (deps
  (:orig    OpenGL-Registry/xml/gl.xml)
  (:patches (glob_files gl.xml.patches/*.patch)))
 (action
  (progn
   (copy %{orig} %{target})
   (run git apply %{patches}))))

(rule
 (targets  GL.ml GL_stubs.c)
 (deps
  (:gen src/generator.exe)
  (glob_files overrides/*.{ml,c})
  gl.xml)
 (action   (run %{gen})))

(library
 (name            GL)
 (modules         GL)
 (wrapped         false)
 (libraries       bigarray)
 (foreign_stubs
  (language       c)
  (names          GL_stubs)
  (flags          -Wall -Wextra -Wno-pointer-sign))
 (c_library_flags (-lGL)))
