opam-version: "2.0"
version: "0~~dev"
synopsis: "An OpenGL binding generator for OCaml"
maintainer: "Sylvain BOILARD <boilard@crans.org>"
authors: "Sylvain BOILARD <boilard@crans.org>"
license: "Zlib"
homepage: "https://github.com/SylvainBoilard/GL-OCaml-Generator"
bug-reports: "https://github.com/SylvainBoilard/GL-OCaml-Generator/issues"
depends: [
  "xmlm"
  "dune"              {build & >= "2.0"}
  "ocaml"             {>= "4.08.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/SylvainBoilard/GL-OCaml-Generator.git"
