opam-version: "2.0"
version: "0~~dev"
synopsis: "An OpenGL binding generator for OCaml"
maintainer: "Sylvain BOILARD <boilard@crans.org>"
authors: ["Sylvain BOILARD <boilard@crans.org>"]
license: "Zlib"
homepage: "https://github.com/SylvainBoilard/GL-OCaml"
bug-reports: "https://github.com/SylvainBoilard/GL-OCaml/issues"
dev-repo: "git+https://github.com/SylvainBoilard/GL-OCaml.git"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "base-bigarray"
  "xmlm"
  "dune"              {build & >= "2.0"}
  "ocaml"             {>= "4.08.0"}
]
